--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Catalogo de Productos Escolares</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Catálogo Escolar</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    
+  <h1>Catálogo de Útiles Escolares</h1>
+  <div id="catalogo" class="catalogo"></div>
+
+  <script src="script.js"></script>
 </body>
 </html>
